precompiles/utils/macro/tests/precompile/compile-fail/evm-data/no-output.stderr
error: A precompile method must have a return type of `EvmResult<_>` (exposed by `precompile_utils`)
  --> tests/precompile/compile-fail/evm-data/no-output.rs:21:2
   |
21 |     fn foo(test: &mut impl PrecompileHandle) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
